CI: add test_all_deps on docker build (#6152)
* add test_all_deps on docker build

Signed-off-by: Ye Sijun <junnplus@gmail.com>

* upgrade pip version

Signed-off-by: Ye Sijun <junnplus@gmail.com>

---------

Signed-off-by: Ye Sijun <junnplus@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build Docker Images
         run: |
           set -x
-          docker-compose build --build-arg skip_ds_deps=true --build-arg skip_frontend_build=true
+          docker-compose build --build-arg test_all_deps=true --build-arg skip_frontend_build=true
           docker-compose up -d
           sleep 10
       - name: Create Test Database
