--- a/viz-lib/package.json
+++ b/viz-lib/package.json
@@ -76,7 +76,8 @@
     "lib"
   ],
   "dependencies": {
-    "axios": "^0.21.2",
+    "axios": "0.27.2",
+    "axios-auth-refresh": "3.3.6",
     "beautifymarker": "^1.0.7",
     "chroma-js": "^1.3.6",
     "classnames": "^2.2.6",
