--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@cypress/code-coverage": "^3.8.1",
     "@percy/agent": "0.24.3",
-    "@percy/cypress": "^2.3.2",
+    "@percy/cypress": "2.3.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/cypress": "^7.0.2",
     "@types/classnames": "^2.2.10",
@@ -108,7 +108,7 @@
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^0.28.7",
-    "cypress": "^5.6.0",
+    "cypress": "6.0.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
