--- a/requirements_all_ds.txt
+++ b/requirements_all_ds.txt
@@ -10,8 +10,8 @@ pymongo[tls,srv]==4.3.3
 vertica-python==1.1.1
 td-client==1.0.0
 pymssql==2.1.5
-boto3>=1.10.0,<1.11.0
-botocore>=1.13,<1.14.0
+boto3==1.28.8
+botocore==1.31.8
 sasl>=0.1.3
 thrift>=0.8.0
 thrift_sasl>=0.1.0
