--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,18 @@ services:
     depends_on:
       - postgres
       - redis
-    ports:
-      - "5001:5000"
-      - "5678:5678"
+    # ports:
+    #   - "5001:5000"
+    #   - "5678:5678"
+    expose:
+      - 5000
+      - 5678
     restart: always
     <<: *redash-environment
     environment:
       PYTHONUNBUFFERED: 0
+    networks:
+      - app-network
   scheduler:
     <<: *redash-service
     command: dev_scheduler
@@ -35,6 +40,8 @@ services:
       - server
     restart: always
     <<: *redash-environment
+    networks:
+      - app-network
   worker:
     <<: *redash-service
     command: dev_worker
@@ -44,13 +51,19 @@ services:
     environment:
       PYTHONUNBUFFERED: 0
     restart: always
+    networks:
+      - app-network
   redis:
     image: redis:7-alpine
     restart: always
+    networks:
+      - app-network
   postgres:
     image: pgautoupgrade/pgautoupgrade:15-alpine3.8
-    ports:
-      - "15432:5432"
+    # ports:
+    #   - "15432:5432"
+    expose:
+      - 5432
     # The following turns the DB into less durable, but gains significant performance improvements for the tests run (x3
     # improvement on my personal machine). We should consider moving this into a dedicated Docker Compose configuration for
     # tests.
@@ -60,12 +73,46 @@ services:
       - redash-data:/var/lib/postgresql/data
     environment:
       POSTGRES_HOST_AUTH_METHOD: "trust"
+    networks:
+      - app-network
   email:
     image: maildev/maildev
-    ports:
-      - "1080:1080"
-      - "1025:1025"
+    # ports:
+    #   - "1080:1080"
+    #   - "1025:1025"
+    expose:
+      - 1080
+      - 1025
     restart: unless-stopped
+    networks:
+      - app-network
+
+  nginx:
+    build:
+      context: nginx/ # Use an image built from the specified dockerfile in the current directory.
+      dockerfile: Dockerfile
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d/
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 443:443
+      # - 5000:5000
+      - 5678:5678
+      - 15432:5432
+      - 1080:1080
+      - 1025:1025
+    depends_on:
+      - server
+      - postgres
+      - email
+    restart: always
+    networks:
+      - app-network
 
 volumes:
   redash-data:
+
+
+networks:
+  app-network:
+    driver: bridge
