--- a/nginx/conf.d/nginx-server.conf
+++ b/nginx/conf.d/nginx-server.conf
@@ -2,22 +2,9 @@ upstream server_redash_main {
     server server:5000;
 }
 
-upstream server_redash_second {
-    server server:5678;
-}
-
-
-upstream mail_server_main {
-    server email:1080;
-}
-
-upstream mail_server_second {
-    server email:1025;
-}
-
-
 server {
     listen 443 ssl;
+    listen [::]:443 ssl;
     server_name  developersonda.tech;
 
 
@@ -30,79 +17,8 @@ server {
 
     }
   
-    #if ($host != "developersonda.tech") {
-    #    return 301 https://$host$request_uri;
-    #}
-}
-
-server {
-    listen       5678 ssl;
-    server_name  developersonda.tech;
-
-    location / {
-        proxy_pass          http://server_redash_second;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-        proxy_connect_timeout 120s;
-        proxy_send_timeout 120s;
-        proxy_read_timeout 120s;
-
-    }
-
 }
 
 
-server {
-    listen       1080 ssl;
-    server_name  developersonda.tech;
-
-
-    location / {
-        proxy_pass          http://mail_server_main;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect     off;
-
-    }
-
-    # if ($scheme != "https") {
-    #     return 301 https://$host$request_uri;
-    # }
-    if ($host != "developersonda.tech") {
-        return 301 https://$host$request_uri;
-    }
-
-
-}
-
-
-server {
-    listen       1025 ssl;
-    server_name  developersonda.tech;
-
-    location / {
-        proxy_pass          http://mail_server_second;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect     off;
-
-    }
-
-    if ($host != "developersonda.tech") {
-        return 301 https://$host$request_uri;
-    }
-
-    # if ($scheme != "https") {
-    #     return 301 https://$host$request_uri;
-    # }
-
-}
-
-map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-}
 
 
