--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,12 @@ services:
     depends_on:
       - postgres
       - redis
-    # ports:
-    #   - "5001:5000"
-    #   - "5678:5678"
-    expose:
-      - 5000
-      - 5678
+    ports:
+      - "5000:5000"
+      # - "5678:5678"
+    # expose:
+    #   - 5000
+    #   - 5678
     restart: always
     <<: *redash-environment
     environment:
@@ -77,12 +77,12 @@ services:
       - app-network
   email:
     image: maildev/maildev
-    # ports:
-    #   - "1080:1080"
-    #   - "1025:1025"
-    expose:
-      - 1080
-      - 1025
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+    # expose:
+    #   - 1080
+    #   - 1025
     restart: unless-stopped
     networks:
       - app-network
@@ -96,15 +96,10 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 443:443
-      # - 5000:5000
-      - 5678:5678
-      - 15432:5432
-      - 1080:1080
-      - 1025:1025
+      - 5432:5432
     depends_on:
       - server
       - postgres
-      - email
     restart: always
     networks:
       - app-network
